Add a property to indicate if an event has yet to happen (and isn't currently running)

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -107,7 +107,9 @@
                                 }
                             }
                         </div>
-                        @ticketCta("action--sold-out-event-ticket-details", "action--buy-event-ticket-details")
+                        @if(event.isBookable) {
+                            @ticketCta("action--sold-out-event-ticket-details", "action--buy-event-ticket-details")
+                        }
                     </div>
                 }
             }
