error flash message fragment and implementation, tidy up of form error message work to use the flash message styles

--- a/frontend/app/views/fragments/form/errorMessageDisplay.scala.html
+++ b/frontend/app/views/fragments/form/errorMessageDisplay.scala.html
@@ -1,4 +1,4 @@
 @(showTopBorder: Boolean = false, isSlim: Boolean = false)
 <fieldset class="fieldset fieldset--no-bg@if(showTopBorder == true){ fieldset--top-border}@if(isSlim == true){ fieldset--slim}">
-    <ul class="u-unstyled js-payment-errors form__error is-hidden"></ul>
+    <ul class="u-unstyled flash-message flash-message--error js-payment-errors is-hidden"></ul>
 </fieldset>
