--- a/frontend/assets/stylesheets/_head.common.scss
+++ b/frontend/assets/stylesheets/_head.common.scss
@@ -55,3 +55,6 @@
 @import 'nav/control';
 @import 'nav/brand-bar';
 
+/* Flash Message
+   ========================================================================== */
+@import 'components/flash-message';
