--- a/frontend/assets/stylesheets/_vars.scss
+++ b/frontend/assets/stylesheets/_vars.scss
@@ -245,3 +245,5 @@ $mem-event-button-hover: rgba(0, 0, 0, .65);
 $side-margins-top-magic-number: 114px;
 $border-bottom-color: rgba(255, 255, 255, .29);
 
+$flash-message-error: #fdf4f3;
+
