Update sticky.js to be able to check for height of sibling el
- Fixes bug with sticky sidebar on short pages jumping
- Allows a sibling el to be set, if set it will check to make sure the
  height of that el is greater than the sticky el
- Update sticky.js to be able to check for height of sibling el
- Expose init() method rather than auto-init

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -144,7 +144,7 @@
                     case _ => {}
                 }
 
-                <div class="event-content__sticky js-sticky">
+                <div class="event-content__sticky js-sticky" data-sticky-sibling=".event-content__body">
                     <div class="event-content__info">
                         <div class="event-content__name" itemprop="name">@event.name.text</div>
                         <div class="event-content__time event-content--line-divider u-cf">
