Use padding not margin in .header__primary to avoid overflow

--- a/frontend/assets/stylesheets/layout/_header.scss
+++ b/frontend/assets/stylesheets/layout/_header.scss
@@ -27,7 +27,8 @@ $header-margin: 36px;
     }
     .header__primary {
         float: left;
-        margin-left: rem($header-padding / 2);
+        padding-left: rem($header-padding / 2);
+        padding-right: rem($header-padding / 2);
     }
 
     .header__secondary {
