--- a/frontend/assets/stylesheets/nav/_nav.scss
+++ b/frontend/assets/stylesheets/nav/_nav.scss
@@ -39,6 +39,10 @@
         float: left;
     }
 
+    .nav__item--right {
+        float: right;
+    }
+
     .nav__link {
         position: relative;
         color: $black;
