added benefit icon class

--- a/frontend/app/views/fragments/benefits/detail.scala.html
+++ b/frontend/app/views/fragments/benefits/detail.scala.html
@@ -8,7 +8,7 @@
         <li class="benefit">
             <div class="benefit-title">
                 <div class="benefit-title__primary">
-                    <i class="icon-@benefit.identifier icon--small"></i>
+                    <i class="icon-@benefit.identifier icon--benefits"></i>
                 </div>
                 <div class="benefit-title__secondary">@benefit.title</div>
             </div>
