Move support and feedback email to config

--- a/frontend/app/views/info/giftingPlaceholder.scala.html
+++ b/frontend/app/views/info/giftingPlaceholder.scala.html
@@ -9,7 +9,7 @@
         <h2 class="section-body-headline">Gifting is coming soon</h2>
         <div class="help-intro">
             <p>If you'd like to register your interest in gifting a friend with Guardian Membership, or give feedback about how you'd like gifting to work, just
-                send us a message at <a href="mailto:membershipfeedback@@theguardian.com" class="u-underline">membershipfeedback@@theguardian.com</a>.</p>
+                send us a message at <a href="mailto:@Config.membershipFeedback" class="u-underline">@Config.membershipFeedback</a>.</p>
         </div>
 
     </div>
