--- a/frontend/assets/stylesheets/pages/_events-detail.scss
+++ b/frontend/assets/stylesheets/pages/_events-detail.scss
@@ -23,6 +23,14 @@
     }
 }
 
+.event-header--unavailable {
+    .theme--masterclass &,
+    .theme--guardian-live & {
+        background-color: $c-neutral1;
+        color: $white;
+    }
+}
+
 .event-header__container {
     margin: 0 auto;
     padding: rem($gs-baseline / 2) rem($gs-gutter / 2) rem($gs-gutter + $gs-baseline);
@@ -42,7 +50,7 @@
 }
 
 .event-header__container--details {
-    padding: rem($gs-baseline / 2) rem($gs-gutter / 2) rem($gs-gutter);
+    padding: rem($gs-baseline / 2) rem($gs-gutter / 2) rem($gs-gutter / 1.3);
     position: relative;
     min-height: rem(75px);
 
@@ -54,6 +62,11 @@
     @include mq(mem-full) {
         padding: rem($gs-baseline / 2) rem($gs-gutter) rem($gs-gutter) rem(gs-span(2) + $gs-gutter * 3);
     }
+}
+
+.event-header__container--unavailable {
+    min-height: auto;
+    overflow: auto;
 }
 
 .event-masthead {
@@ -121,51 +134,65 @@
 
 .event-ticket {
     padding-top: rem($gs-gutter);
+}
 
-    .event-ticket__details {
+.event-ticket__details {
 
-        @include mq(tablet) {
-            float: left;
-            padding-right: rem($gs-gutter);
-        }
+    @include mq(tablet) {
+        float: left;
+        padding-right: rem($gs-gutter);
+    }
+}
 
-        .event-ticket__price-amount {
-            @include fs-header(5);
-            -webkit-font-smoothing: antialiased;
-        }
+.event-ticket__details__status {
+    @include fs-textSans(1);
+    font-weight: bold;
 
-        .event-ticket__trail {
-            @include fs-textSans(1);
-        }
+    @include mq(tablet) {
+        @include fs-header(5);
+        -webkit-font-smoothing: antialiased;
+    }
+}
+
+.event-ticket__details__blurb {
+    @include fs-textSans(1);
+}
+
+.event-ticket__price-amount {
+    @include fs-header(5);
+    -webkit-font-smoothing: antialiased;
+}
+
+.event-ticket__trail {
+    @include fs-textSans(1);
+}
+
+.terms-info {
+    @include fs-textSans(1);
+    padding-top: rem(12px);
+
+    @include mq(tablet) {
+        width: rem(gs-span(3) + $gs-gutter * 2);
+        float: left;
     }
 
-    .terms-info {
-        @include fs-textSans(1);
-        padding-top: rem(12px);
+    a {
+        text-decoration: none;
+        color: inherit;
+        padding-bottom: rem(2px);
+        border-bottom: rem(1px) solid;
 
-        @include mq(tablet) {
-            width: rem(gs-span(3) + $gs-gutter * 2);
-            float: left;
+        .theme--guardian-live & {
+            border-bottom-color: transparentize($white, .5);
+            &:hover {
+                border-bottom-color: $white;
+            }
         }
 
-        a {
-            text-decoration: none;
-            color: inherit;
-            padding-bottom: rem(2px);
-            border-bottom: rem(1px) solid;
-
-            .theme--guardian-live & {
-                border-bottom-color: transparentize($white, .5);
-                &:hover {
-                    border-bottom-color: $white;
-                }
-            }
-
-            .theme--masterclass & {
-                border-bottom-color: transparentize($c-neutral3, .5);
-                &:hover {
-                    border-bottom-color: $c-neutral1;
-                }
+        .theme--masterclass & {
+            border-bottom-color: transparentize($c-neutral3, .5);
+            &:hover {
+                border-bottom-color: $c-neutral1;
             }
         }
     }
@@ -360,9 +387,26 @@
     }
 }
 
+.event-content__info__inner {
+    padding: rem($gs-gutter);
+}
+
+.event-content__info__header {
+    background-color: $c-neutral1;
+    padding: rem($gs-gutter);
+    color: $white;
+}
+
+.event-content__info__header__status {
+    @include fs-header(1);
+}
+
+.event-content__info__header__blurb {
+    @include fs-textSans(3);
+}
+
 .event-content__info {
     background-color: $c-neutral7;
-    padding: rem($gs-gutter);
     overflow: hidden;
     @include fs-textSans(3);
 
@@ -451,6 +495,12 @@
         padding-top: rem($gs-baseline/2);
     }
 
+}
+
+.event-content__info--unavailable {
+    .event-content__item {
+        color: $c-neutral2;
+    }
 }
 
 .event-content--line-divider {
