Add styleguide template, document all benefits fragment variants

--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -8,6 +8,7 @@
 @import 'components/action';
 @import 'components/benefits';
 @import 'components/social';
+@import 'components/patterns';
 
 /* ==========================================================================
    Membership pages
