Make nav lable pural possesive

--- a/frontend/app/views/fragments/nav.scala.html
+++ b/frontend/app/views/fragments/nav.scala.html
@@ -33,5 +33,5 @@
     <a href="/feedback" class="nav__link nav__link case--lower">Feedback</a>
 </li>
 <li class="@navItemClass() nav__item--right">
-    <a href="@Config.guardianMembershipUrl" class="nav__link nav__link--last case--lower js-members-area">Members Area</a>
+    <a href="@Config.guardianMembershipUrl" class="nav__link nav__link--last case--lower js-members-area">Members' Area</a>
 </li>
