--- a/frontend/app/views/joiner/staff.scala.html
+++ b/frontend/app/views/joiner/staff.scala.html
@@ -6,20 +6,20 @@
 @import play.twirl.api.Html
 @import model.Faq
 
- @signPostItem(btnText: String, btnSrc: String)(description: Html) = {
-     <li class="signpost-item signpost-item--sign">
-         <p class="signpost-item__description">@description</p>
-         <div class="signpost__cta">
-             <a class="action action--no-bottom-margin" href="@btnSrc">@btnText</a>
-         </div>
-     </li>
- }
+@signPostItem(btnText: String, btnSrc: String, description: Html) = {
+    <li class="signpost-item signpost-item--sign">
+        <p class="signpost-item__description">@description</p>
+        <div class="signpost__cta">
+            <a class="action action--no-bottom-margin" href="@btnSrc">@btnText</a>
+        </div>
+    </li>
+}
 
-@signpost(opt1ButtonText: String, opt1ButtonSrc: String, opt2ButtonText: String, opt2ButtonSrc: String)(textOptionOne: Html)(textOptionTwo: Html) = {
+@signpost(opt1ButtonText: String, opt1ButtonSrc: String)(opt1Text: Html)(opt2ButtonText: String, opt2ButtonSrc: String)(opt2Text: Html) = {
     <ul class="signpost u-unstyled">
-        @signPostItem(opt1ButtonText: String, opt1ButtonSrc: String)(textOptionOne: Html)
+        @signPostItem(opt1ButtonText, opt1ButtonSrc, opt1Text)
         <li class="signpost-item signpost-item--divider">or</li>
-        @signPostItem(opt2ButtonText: String, opt2ButtonSrc: String)(textOptionTwo: Html)
+        @signPostItem(opt2ButtonText, opt2ButtonSrc, opt2Text)
     </ul>
 }
 
@@ -39,43 +39,50 @@
 
         <section class="page-section">
             <div class="page-section__row">
-                <div class="page-section__primary"><h2 class="page-section-headline">
-                    Join Guardian Staff Membership now</h2></div>
+                <div class="page-section__primary">
+                    <h2 class="page-section-headline">Join Guardian Staff Membership now</h2>
+                </div>
                 <div class="page-section__secondary">
+                    @staffEmail.identityEmail.fold {
+                        <p>
+                            To join Guardian Staff Membership you must have a Guardian Identity account set up using
+                            your work email address ending @@theguardian.com (@@guardian.co.uk will work too).
+                        </p>
 
-        @staffEmail.identityEmail.fold {
-            <p>To join Guardian Staff Membership you must have a Guardian Identity account set up using your work email address ending @@theguardian.com (@@guardian.co.uk will work too).</p>
-            @signpost(
-                "Create account", Config.idWebAppRegisterUrl(routes.Joiner.staff.url),
-                "Sign in", Config.idWebAppSigninUrl(routes.Joiner.staff.url)) {
-                    Set up a <strong>new</strong> Guardian Identity account
-                }{
-                    Use an <strong>existing</strong> Guardian Identity account
-                }
-        } { identityEmail =>
-            <div class="u-cf">
-                @for(srcUrl <- avatarUrl){
-                    <img class="user-img" src="@srcUrl" alt="User Image"/>
-                }
-                @for(name <- displayName){
-                    <p>Hello <strong>@displayName</strong>.
-                    } Glad to see you've decided to join Guardian Staff Membership.</p>
-            </div>
-            @if(staffEmail.emailsMatch) {
-                <a class="action action--no-bottom-margin" href="@routes.Joiner.enterStaffDetails">Join</a>
-            } else {
-                <p>Currently your account is set up with <strong>@identityEmail</strong>. To join Guardian Staff Membership you must have a Guardian Identity account set up using your work email address ending @@theguardian.com (@@guardian.co.uk will work too).</p>
+                        @signpost("Create account", Config.idWebAppRegisterUrl(routes.Joiner.staff.url)) {
+                            Set up a <strong>new</strong> Guardian Identity account
+                        }("Sign in", Config.idWebAppSigninUrl(routes.Joiner.staff.url)) {
+                            Use an <strong>existing</strong> Guardian Identity account
+                        }
+                    } { identityEmail =>
+                        <div class="u-cf">
+                            @for(srcUrl <- avatarUrl){
+                                <img class="user-img" src="@srcUrl" alt="User Image"/>
+                            }
+                            <p>
+                                @for(name <- displayName){
+                                    Hello <strong>@displayName</strong>.
+                                }
+                                Glad to see you've decided to join Guardian Staff Membership.
+                            </p>
+                        </div>
 
-                @signpost(
-                    "Change email and join", Config.idWebAppAccountEditUrl(routes.Joiner.staff.url),
-                    "Create new account", Config.idWebAppRegisterUrl(routes.Joiner.staff.url)) {
-                        Change email address to <strong> @staffEmail.googleEmail </strong> Guardian Identity account
-                    }{
-                        Set up a <strong>new</strong> Guardian Identity account
+                        @if(staffEmail.emailsMatch) {
+                            <a class="action action--no-bottom-margin" href="@routes.Joiner.enterStaffDetails">Join</a>
+                        } else {
+                            <p>
+                                Currently your account is set up with <strong>@identityEmail</strong>. To join Guardian
+                                Staff Membership you must have a Guardian Identity account set up using your work email
+                                address ending @@theguardian.com (@@guardian.co.uk will work too).
+                            </p>
+
+                            @signpost("Change email and join", Config.idWebAppAccountEditUrl(routes.Joiner.staff.url)) {
+                                Change email address to <strong> @staffEmail.googleEmail </strong> Guardian Identity account
+                            }("Create new account", Config.idWebAppRegisterUrl(routes.Joiner.staff.url)) {
+                                Set up a <strong>new</strong> Guardian Identity account
+                            }
+                        }
                     }
-            }
-        }
-
                 </div>
             </div>
         </section>
@@ -84,7 +91,7 @@
             <div class="page-section__row">
                 <div class="page-section__primary"><h2 class="page-section-headline">Partner benefits</h2></div>
                 <div class="page-section__secondary">
-                @fragments.benefits.detail(Tier.Partner)
+                    @fragments.benefits.detail(Tier.Partner)
                 </div>
             </div>
         </section>
