--- a/frontend/app/views/staff/oauth.scala.html
+++ b/frontend/app/views/staff/oauth.scala.html
@@ -2,8 +2,17 @@
 
 @main("Staff login") {
 
-@for(error <- errorOpt) {
-<p>Error: @error</p>
-}
-
+<section class="page-section">
+    <div class="page-section__row">
+        <div class="page-section__primary"></div>
+        <div class="page-section__secondary">
+            <h1 class="page-headline">Guardian Staff Membership</h1>
+            <p class="page-intro">
+                @for(error <- errorOpt) {
+                    @error
+                }
+            </p>
+        </div>
+    </div>
+</section>
 }
