--- a/frontend/app/views/event/list.scala.html
+++ b/frontend/app/views/event/list.scala.html
@@ -1,9 +1,31 @@
-@(eventPortfolio: model.EventPortfolio, pageInfo: model.PageInfo)(implicit token: play.filters.csrf.CSRF.Token)
+@(eventPortfolio: model.EventPortfolio, pageInfo: model.PageInfo, showPastEvents: Boolean = false)(implicit token: play.filters.csrf.CSRF.Token)
 
 @import com.gu.membership.salesforce.Tier
 @import model.Benefits
 
 <section class="event-blocks">
+
+    @if(showPastEvents && eventPortfolio.pastEvents) {
+        <div class="event-block">
+            <div class="event-block__header">
+                <h4 class="event-block__header__title case--lower">Past events</h4>
+            </div>
+            <div class="event-block__events">
+                <ul class="events-list events-list--items-4 u-unstyled">
+                    @for(event <- eventPortfolio.pastEvents.get.slice(0, 4)) {
+                        @fragments.event.item(event, false, isMinimal=true)
+                    }
+                </ul>
+
+                <ul class="events-list events-list--items-2 u-unstyled">
+                    @for(event <- eventPortfolio.pastEvents.get.slice(4, 10)) {
+                        @fragments.event.item(event, false, isMinimal=true)
+                    }
+                </ul>
+
+            </div>
+        </div>
+    }
 
     @if(eventPortfolio.orderedEvents.nonEmpty) {
         <div class="event-block">
@@ -28,13 +50,15 @@
             <h4 class="event-block__header__title case--lower">What's on</h4>
         </div>
         <div class="event-block__events">
-            <ul class="events-list u-unstyled@if(eventPortfolio.normal.length == 0){ events-list--empty}" id="js-filter-container">
+            <ul class="events-list events-list--items-3 u-unstyled@if(eventPortfolio.normal.length == 0){ events-list--empty}" id="js-filter-container">
                 @for(event <- eventPortfolio.normal) {
                     @fragments.event.item(event, false)
                 }
             </ul>
         </div>
     </div>
+
+
 </section>
 
 @* ===== Join Today ===== *@
